--- a/src/app/img-card/img-card.component.html
+++ b/src/app/img-card/img-card.component.html
@@ -1,13 +1,17 @@
 <mat-card>
   <mat-card-actions>
-    <button
-      color="primary" 
-      (click)="generateSrc()"
+    <button 
+      color="{{ button.color }}" 
+      (click)="generateSrc()" 
+      disabled="{{ button.disabled }}"
       mat-button 
-      mat-raised-button>Give me another cat</button>
+      mat-raised-button>
+      {{ button.text }}
+    </button>
   </mat-card-actions>
   <img 
     src="{{ src }}" 
-    alt="Cute cat"
+    alt="Progressive cute cat"
     mat-card-image>
 </mat-card>
+  
