--- a/src/app/img-card/img-card.component.html
+++ b/src/app/img-card/img-card.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<!-- <mat-card>
   <mat-card-actions>
     <button 
       color="{{ button.color }}" 
@@ -13,5 +13,40 @@
     src="{{ src }}" 
     alt="Progressive cute cat"
     mat-card-image>
-</mat-card>
+</mat-card> -->
   
+<div style="text-align:center">
+  <div [hidden]="!hasCameras">
+
+    <zxing-scanner #scanner class="small-video" start="true" [hidden]="qrResultString !== null" [device]="selectedDevice" (scanSuccess)="handleQrCodeResult($event)"></zxing-scanner>
+
+    <h2 *ngIf="!this.selectedDevice">No camera selected.</h2>
+
+    <div *ngIf="qrResultString != null">
+      <h1>Result:</h1>
+      <h2>{{ qrResultString }}</h2>
+    </div>
+
+  </div>
+
+  <div *ngIf="!hasCameras && hasPermission === true">
+
+    <h1>Looks like your actual device does not has cameras, or I could no find'em. </h1>
+
+  </div>
+
+  <div *ngIf="hasPermission === undefined">
+
+    <h1>Waiting for permissions.</h1>
+
+    <blockquote>
+      <h2>If your device does not has cameras, no permissions will be asked.</h2>
+    </blockquote>
+
+  </div>
+  <div *ngIf="hasPermission === false">
+
+    <h1>You denied the camera permissions, we can't scan anything without it. ðŸ˜ª</h1>
+
+  </div>
+</div>
